--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,15 +1,13 @@
 ---
-import { Button } from '@/components/ui/button'
-import { Plus } from '@lucide/astro';
+import { Sparkles } from '@lucide/astro';
 ---
 
 <div class="font-inter h-full flex flex-col md:block">
 	<main class="h-full flex justify-center">
 		<section class="flex items-start flex-col justify-center p-4 md:block md:pt-[10%]">
 			<div data-hero class="flex flex-col items-center justify-center">
-				<h1 class="text-4xl font-bold">Welcome to Astro</h1>
+				<h1 class="text-4xl font-bold flex gap-4">Welcome to Astro <Sparkles class="w-10 h-10" /></h1>
 				<p class="text-lg">This is a simple welcome page</p>
-				<Button><Plus /> Click me</Button>
 			</div>
 		</section>
 	</main>
