--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -6,7 +6,7 @@ import NewsletterSignup from './NewsletterSignup.tsx';
 <div class="font-inter h-full flex flex-col md:block">
 	<main class="h-full flex justify-center">
 		<section class="flex items-start flex-col justify-center p-4 md:block md:pt-[10%]">
-			<div data-hero class="flex flex-col items-center justify-center">
+			<div data-hero class="bg-surface flex flex-col items-center justify-center">
 				<h1 class="text-4xl font-bold flex gap-2">Welcome to Astro <Sparkles class="w-10 h-10" /></h1>
 				<p class="text-lg">This is a simple welcome page</p>
 				<NewsletterSignup client:load />
